[project]
name = "groundingdino-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "opencv-python>=4.8.0",
    "watchdog>=6.0.0",
]

[tool.setuptools]
packages = []

